Add function for number key press

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="frame">
-        <div id="result"></div>
-        <div id="keys">
+        <div style="height: 30px;background-color: aqua;" id="result"></div>
+        <div id="numberKeys">
             <button id="1">1</button>
             <button id="2">2</button>
             <button id="3">3</button>
@@ -23,7 +23,10 @@
             <button id="9">9</button>
         </div>
     </div>
-
+    <div class="testingArea">
+        <input id="operationSelected" type="checkbox">
+        <label for="operationSelected">Operation Selected</label>
+    </div>
 
     <script src="./script.js"></script>
 </body>
