Add debug display and its update functions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <input id="operationSelected" type="checkbox">
         <label for="operationSelected">Operation Selected</label>
     </div>
-
+    <div class="displayArea">
+        <p id="firstValueDisplay">First Value:</p>
+        <p id="secondValueDisplay">Second Value:</p>
+    </div>
     <script src="./script.js"></script>
 </body>
 
