Add operation keys and assign its functions

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <button id="8">8</button>
             <button id="9">9</button>
         </div>
+        <div id="operationKeys">
+            <button id="add">+</button>
+            <button id="subtract">-</button>
+            <button id="multiply">*</button>
+            <button id="divide">/</button>
+        </div>
+        <button id="equal">=</button>
     </div>
     <div class="testingArea">
         <input id="operationSelected" type="checkbox">
@@ -30,6 +37,8 @@
     <div class="displayArea">
         <p id="firstValueDisplay">First Value:</p>
         <p id="secondValueDisplay">Second Value:</p>
+        <p id="operationDisplay">Operation:</p>
+        <p id="resultDisplay">Result:</p>
     </div>
     <script src="./script.js"></script>
 </body>
