Adjust classes and js selector for buttons

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
                 <button class="number" id="1">1</button>
                 <button class="number" id="2">2</button>
                 <button class="number" id="3">3</button>
-                
+                <button class="number" id="0">0</button>
+                <button class="decimal">.</button>
             </div>
             <div class="operations" id="operationKeys">
-                <button id="+">+</button>
-                <button id="-">-</button>
-                <button id="*">*</button>
-                <button id="/">/</button>
-                <button id="=">=</button>
+                <button class="operation" id="+">+</button>
+                <button class="operation" id="-">-</button>
+                <button class="operation" id="*">*</button>
+                <button class="operation" id="/">/</button>
+                <button class="operation" id="=">=</button>
             </div>
         </div>
         
