Add percent, All clear, sign button. adjust css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
     <div class="frame">
-        <div style="height: 30px;background-color: aqua;" id="result"></div>
+        <div class="result" id="result"></div>
         <div class="buttons">
             <div class="numbers" id="numberKeys">
+                <button class="clear">AC</button>
+                <button class="sign">+/-</button>
+                <button class="percent">%</button>
                 <button class="number" id="7">7</button>
                 <button class="number" id="8">8</button>
                 <button class="number" id="9">9</button>
@@ -22,7 +25,7 @@
                 <button class="number" id="1">1</button>
                 <button class="number" id="2">2</button>
                 <button class="number" id="3">3</button>
-                <button class="number" id="0">0</button>
+                <button class="number zero" id="0">0</button>
                 <button class="decimal">.</button>
             </div>
             <div class="operations" id="operationKeys">
